--- a/CapaPresentacion/capaPresentacion.csproj
+++ b/CapaPresentacion/capaPresentacion.csproj
@@ -102,5 +102,8 @@
       <Name>Helper</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Script DB\ARTICULOS_DB.sql" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
